--- a/style.css
+++ b/style.css
@@ -21,17 +21,27 @@ body{
 .hero_section{
     height: 100vh;
     width: 100%;
-    background-image: url("images/heroBg.jpg");
+    background-color: #032e30;
+    /* background-image: url("images/heroBg.jpg");
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
-.hero_section h1{
-    position: absolute;
-    bottom: 0.5rem;
-    left: 1.5rem;
-    font-size: 10.2rem;
-    font-weight: 800;
+.hero_title{
+    opacity: 10%;
+    margin-top: 16rem;
+    font-size: 7rem;
+    font-weight: 900;
+    color: #032e30;
+    text-shadow: -1px 1px 0 #fff,
+                  1px 1px 0 #fff,
+                 1px -1px 0 #fff,
+                -1px -1px 0 #fff;
 }
 
 .main_wrapper{
@@ -64,6 +74,7 @@ li{
 }
 
 .is--large{
+    /* background-color: #fff; */
     position: absolute;
     left: 36%;
     font-size: 2rem;
@@ -131,6 +142,7 @@ li{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .grid--wrapper .img-1{
@@ -183,6 +195,14 @@ li{
     bottom: 0;
     left: 1rem;
     opacity: 0;
+}
+.pro_title{
+    position: absolute;
+    font-size: 1rem;
+    opacity: 1;
+    bottom: 2rem;
+    right: 1rem ;
+    font-weight: 400;
 }
 
 .active{
