--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
     padding: 0;
     font-family: 'Archivo', sans-serif;
 }
+a{
+  text-decoration: none;
+  color: inherit;
+}
+a:hover{
+    color: inherit;
+}
+
 ::-webkit-scrollbar{
     width: 8px;
     background-color: white;
@@ -22,14 +30,10 @@ body{
     height: 100vh;
     width: 100%;
     background-color: #032e30;
-    /* background-image: url("images/heroBg.jpg");
-    background-position: center;
-    background-size: cover; */
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    word-wrap: break-word;
 }
 
 .hero_title{
@@ -38,10 +42,10 @@ body{
     font-size: 7rem;
     font-weight: 900;
     color: #032e30;
-    text-shadow: -1px 1px 0 #fff,
-                  1px 1px 0 #fff,
-                 1px -1px 0 #fff,
-                -1px -1px 0 #fff;
+    text-shadow: -1px 1px 0 #e7e1d9,
+                  1px 1px 0 #e7e1d9,
+                 1px -1px 0 #e7e1d9,
+                -1px -1px 0 #e7e1d9;
 }
 
 .main_wrapper{
@@ -83,6 +87,11 @@ li{
     justify-content: center;
 }
 
+.rights{
+    display: flex; 
+    justify-content: end;
+}
+
 .quote{
     margin-top: 4rem;
 }
@@ -111,7 +120,6 @@ li{
 }
 
 .sticky--circle img{
-    background-color: black;
     position: sticky;
     top: 10rem;
     object-fit: cover;
@@ -208,3 +216,133 @@ li{
 .active{
     opacity: 1 !important;
 }
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+.hero_title{
+    font-size: 5rem;
+}
+
+
+.main_wrapper ul{
+    font-size: small;
+}
+
+li{
+    width: 100px;
+    display: none;
+}
+
+.rights{
+    display: none;
+}
+
+
+
+
+.text_wrap h1{
+    font-size: 4rem;
+    line-height: 4rem;
+}
+.titleItem{
+    position: absolute;
+    font-size: 4rem;
+    bottom: 0;
+    left: 1rem;
+    opacity: 0;
+}
+
+
+
+.grid--wrapper .img-1{
+    transform: translateY(5rem);
+}
+
+.grid--wrapper .img-2{
+    transform: translateY(2rem);
+}
+
+.grid--wrapper .img-3{
+    transform: translateY(2rem);
+}
+
+.grid--wrapper .img-4{
+    transform: translateY(1rem) ;
+}
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .cursor{
+    z-index: 5;
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #fff;
+    transition: 0.1s;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    mix-blend-mode: difference;
+  } */
+  
+  /* .scrollMe:hover ~ .cursor{
+    transform: scale(3);
+  } */
