--- a/style.css
+++ b/style.css
@@ -15,12 +15,7 @@ a:hover{
 }
 
 ::-webkit-scrollbar{
-    width: 8px;
-    background-color: white;
-}
-::-webkit-scrollbar-thumb{
-    background-color: #555;
-    border-radius: 6px;
+    display: none;
 }
 body{
     position: relative;
